fix(replay-view): ensure proper z-index and width adjustments
Correct the z-index and width settings in the replay view to prevent graphical
and layout issues. The controler component's styles have been updated to
enforce a specific width and ensure it remains centered. Additionally, the
Controler component has been refactored to use functional components and
incorporates new logic for handling play/pause states and seeking.

The fetchZIP callback has been simplified, and unnecessary fetch calls
have been removed. The player's state management has been enhanced to
handle play, pause, and seeking more accurately. The play.worker has been
updated to use a variable based on HZ for the MIN_BUFFER_SIZE and to
improve the start and pause functions.

--- a/src/views/ReplayView/components/Controler/index.module.less
+++ b/src/views/ReplayView/components/Controler/index.module.less
@@ -5,5 +5,22 @@
   border-radius: 16px;
   color: #fff;
   display: flex;
-  flex-direction: column;
+  align-items: center;
+  user-select: none;
+
+  .action-btn {
+    color: #f2f2f2;
+    font-size: 24px;
+    line-height: normal;
+    cursor: pointer;
+
+    &:hover {
+      opacity: 0.8;
+    }
+  }
+
+  .slider {
+    flex: 1;
+    margin: 0 20px;
+  }
 }
