--- a/src/views/ReplayView/index.module.less
+++ b/src/views/ReplayView/index.module.less
@@ -9,6 +9,7 @@
     left: 50%;
     top: 20px;
     transform: translateX(-50%);
+    width: 50%;
     z-index: 1;
   }
 }
